deploy/01-namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: datatub-coming-soon
  labels:
    app: datatub-coming-soon
