deploy/03-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: datatub-coming-soon
  name: datatub-coming-soon-deployment
  labels:
    app: datatub-coming-soon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datatub-coming-soon
  template:
    metadata:
      labels:
        app: datatub-coming-soon
    spec:
      containers:
        - name: app
          image: $IMAGE
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: subscriber-data
              mountPath: /data
      volumes:
        - name: subscriber-data
          persistentVolumeClaim:
            claimName: datatub-coming-soon-data
      imagePullSecrets:
        - name: ghcr-credentials
