deploy/03-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: datatub-coming-soon
  name: datatub-coming-soon-service
spec:
  selector:
    app: datatub-coming-soon
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
